--- a/css/reset.css
+++ b/css/reset.css
@@ -4,6 +4,7 @@ body, h1, h2, h3, h4, h5, h6, ul, li, p {
 }
 
 body {
+  min-width: 1120px;
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
