--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,39 @@
   width: 980px;
   margin: 0 auto;
 }
+
+/* 通用头部1 */
+.common_header_01 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+/* 通用按钮1 */
+.common_button_01 {
+  display: block;
+  padding-right: 4px;
+  border-radius: 4px;
+  background: url("../assets/images/button-sprite.png") right -100px no-repeat;
+  box-sizing: border-box;
+}
+
+.common_button_01 > i {
+  display: block;
+  height: 31px;
+  line-height: 31px;
+  padding-left: 5px;
+  text-align: center;
+  font-style: normal;
+  background: url("../assets/images/button-sprite.png") 0 -59px no-repeat;
+}
+
+.common_button_01:hover {
+  background-position: right -182px;
+}
+
+.common_button_01:hover i {
+  background-position: 0 -141px;
+}
