--- a/css/page_main.css
+++ b/css/page_main.css
@@ -146,7 +146,6 @@
   border-top: none;
   border-bottom: none;
   background-image: url("../assets/images/content-background.png");
-  height: 200px;
 }
 
 .main-container .content .left-area {
@@ -157,6 +156,7 @@
   width: 250px;
 }
 
+/* 用户登录 */
 .main-container .content .user-login {
   height: 126px;
   background: url("../assets/images/content-sprite.png") 0 0;
@@ -184,4 +184,84 @@
 
 .main-container .content .user-login .user-login-button:hover {
   background-position: -110px -195px;
+}
+
+/* 入驻歌手/热门主播 */
+.main-container .content .author-list {
+  width: 250px;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+.main-container .content .common_header_01 .title {
+  font-size: 12px;
+  color: #333;
+}
+
+.main-container .content .common_header_01 .more {
+  color: #666;
+}
+
+.main-container .content .common_header_01 .more:hover {
+  text-decoration: underline;
+}
+
+/* 入驻歌手 */
+.main-container .content .singer-list {
+  margin: 20px auto 0;
+}
+
+.main-container .content .singer-list a {
+  display: flex;
+  width: 210px;
+  height: 62px;
+  margin-bottom: 14px;
+}
+
+.main-container .content .singer-list a img {
+  width: 62px;
+}
+
+.main-container .content .singer-list a .singer-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 148px;
+  padding: 0 15px;
+  border: 1px solid #e9e9e9;
+  border-left: none;
+  box-sizing: border-box;
+  background-color: #fafafa;
+}
+
+.main-container .content .singer-list a:hover .singer-info {
+  background-color: #f4f4f4;
+}
+
+.main-container .content .singer-info .name {
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.main-container .content .singer-info .desc {
+  color: #666;
+}
+
+.main-container .content .singer-info .name, 
+.main-container .content .singer-info .desc {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.main-container .content .author-list .apply {
+  width: 210px;
+  font-weight: 700;
+}
+
+/* 热门主播 */
+.main-container .content .hot-author {
+  margin-top: 20px;
 }
