--- a/css/page_main.css
+++ b/css/page_main.css
@@ -265,3 +265,46 @@
 .main-container .content .hot-author {
   margin-top: 20px;
 }
+
+.main-container .content .hot-author-list {
+  margin: 20px auto;
+}
+
+.main-container .content .hot-author-list li {
+  display: flex;
+  width: 210px;
+  height: 50px;
+}
+
+.main-container .content .hot-author-list .album {
+  flex: 1;
+}
+.main-container .content .hot-author-list .album img {
+  width: 40px;
+  height: 40px;
+}
+
+.main-container .content .hot-author-list .author-info {
+  width: 160px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.main-container .content .author-info .name,
+.main-container .content .author-info .desc {
+  width: 100%;
+  line-height: 21px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.main-container .content .author-info .name:hover {
+  text-decoration: underline;
+}
+
+.main-container .content .author-info .desc {
+  color: #666;
+}
+
