--- a/css/page_main.css
+++ b/css/page_main.css
@@ -411,3 +411,16 @@
   margin-top: 35px;
 }
 
+.main-container .content .new-disc .disc-area {
+  height: 188px;
+  border: 1px solid #d3d3d3;
+  margin-top: 20px;
+}
+
+.main-container .content .new-disc .disc-inner {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #fff;
+  background-color: #f5f5f5;
+  box-sizing: border-box;
+}
