--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-body, h1, h2, h3, h4, h5, h6, ul, li, p {
+body, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, p {
   margin: 0;
   padding: 0;
 }
@@ -9,7 +9,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-ul, li {
+ul, ol, li {
   list-style: none;
 }
 
